--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Yessica Ramirez<br/>
+						<h1>Yessica Ramirez<br/>Coming Soon
 						</h1>
 						<p>This is the start to my journey into the data realm. Stay tuned for projects and blogs. <Inp>
-							the meantime checkout my <a href="https://www.linkedin.com/in/yessica-v-ramirez">LinkedIn (Yessica Ramirez)</a>. 
-							<p>Feel free to reach out! All advice and suggestions are welcome
+							In the meantime checkout my <a href="https://www.linkedin.com/in/yessica-v-ramirez">LinkedIn (Yessica Ramirez)</a>. 
+							<p>Feel free to reach out! All advice and suggestions are welcome.
 							</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
