--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 							<section>
 							<h1>Yessica Ramirez</h1>
 							<h2>Work in Progress</h2>
-							<p>A first gen. Latina learning about the data domain.</p> 
+							<p>Hi there, I'm a first-generation Latina from Mexico with a passion for learning about the latest technological advancements. 
+								As a computer science major at CSU East Bay, I'm always striving to improve my skills through online resources and working with datasets, 
+								particularly with SQL.</p> 
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -97,12 +99,16 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Resume</h2>
-							<p>I've been on a bumpy ride to discover what pathways are within Tech. I have experience working on 
-								the AWS ecosystem, such as creating an EC2 instance. Also, creating frontend/backend changes to documentation 
-								website to integrate an AI chatbot. The journey has been difficult but full of growth and experience.
-								As of late I am pursuing a path in data, I am contemplating between three roles (I'd love your input
-								on this matter) Data Analyst, Business Intelligence, Data Engineer. I've done my research and understand
-							the fundamental differeneces now it's a matter of hands on practice to discover which interests me the most. 
+							<p>Over the past few years, I've embarked on a journey to explore the different pathways within the tech industry. 
+								I've gained valuable experience working with the AWS ecosystem, from creating EC2 instances to implementing frontend/backend 
+								changes for a documentation website that integrated an AI chatbot. 
+								Although it hasn't been the smoothest ride, I've grown and learned so much along the way.
+								<br><br>
+								Currently, I'm venturing into the world of data and contemplating which role to pursue. 
+								Data Analyst, Business Intelligence, and Data Engineer all sound appealing to me, but I'm having a tough time deciding which 
+								one to focus on. I've done my research and have a good grasp on the fundamental differences between each role, 
+								but nothing beats hands-on experience to truly discover where my interests lie. 
+								Any input or advice would be greatly appreciated!
 							</p>
 							<div class="features">
 								<section>
@@ -175,18 +181,13 @@
 									<ul class="contact">
 										<li>
 											<h3>LinkedIn</h3>
-											<a href= "https://www.linkedin.com/in/yessica-v-ramirez">Yessica Ramirez</a>
+											<ul class="icons">
+												<li><a href="https://www.linkedin.com/in/yessica-v-ramirez" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+											</ul>
 										</li>
 										<li>
 											<h3>Email</h3>
 											<a href="#">yessicavrm@gmail.com</a>
-										</li>
-										
-										<li>
-											<h3>LinkedIn</h3>
-											<ul class="icons">
-												<li><a href="https://www.linkedin.com/in/yessica-v-ramirez" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
 										</li>
 									</ul>
 								</section>
