--- a/GentrificationAnalysis.html
+++ b/GentrificationAnalysis.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>COVID-19 Dashboard</title>
+		<title>Yessica V. Ramirez</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,12 +16,12 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">COVID-19 Tableau Dashboard</a>
+				<a href="index.html" class="title">Gentrification Undergraduate Research Project</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						
-						<li><a href="index.html">tbd</a></li>
+						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -32,12 +32,8 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">COVID-19 Tableau Dashboard</h1>
-							<!--<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>-->
-							<p> The start of my practice with Tableau dashboard. I have previous experience working on 
-								google data Studio although in all honesty Tableau Desktop felt more challenging as I was unaware
-								of all of the customization and analyst options.
-							</p>
+							<h1 class="major">Research</h1>
+							<p>In the works, please come back soon...</p>
 						</div>
 					</section>
 
