--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Yessica V. Ramirez</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,7 +54,6 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Tableau COVID-19 Dashboard</h2>
@@ -66,19 +65,24 @@
 								</div>
 							</div>
 						</section>
-					  <!--   
+					     
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Coming Soon...</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Gentrification Analysis</h2>
+									<p> Using Tableau, I conducted a comprehensive analysis of IPUMS census data and developed an interactive 
+										dashboard displaying key variables including race, income, education, and mortgage. 
+										This project was a part of the RUMBA research program, which I successfully completed and further 
+										honed my skills in analysis, dashboard creation, and research. 
+										I worked with a large dataset of 13 GB spanning from the 1980s to 2021.
+									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="GentrificationAnalysis.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
+						<!-- 
 						<section>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
@@ -145,7 +149,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="ResumePage.html" class="button">Click for Resume</a></li>
 							</ul>
 						</div>
 					</section>
@@ -154,7 +158,9 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p></p>
+							<p>Have any questions, comments, or would like to chat just shoot me a message! I'm 
+								more than happy to meet.
+							</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -188,6 +194,7 @@
 										<li>
 											<h3>Email</h3>
 											<a href="#">yessicavrm@gmail.com</a>
+											<a href="#">yramirez12@horizon.csueastbay.edu</a>
 										</li>
 									</ul>
 								</section>
@@ -201,7 +208,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">Yessica Ramirez</a></li>
 					</ul>
 				</div>
 			</footer>
