Update to resume and index pages

--- a/ResumePage.html
+++ b/ResumePage.html
@@ -38,8 +38,25 @@
 							<object data="2023Resume.pdf" width="800" height="700"></object></center>
 						</div>
 					</section>
-
+					<!--
+					<section id="one" class="wrapper style2 ">
+						<section>
+							<center>
+							<div class="content">
+								<div class="inner">
+									<h2>Get to know me</h2>
+									<p> 
+										<li> 🥾Love to go for a hike and a dancing 💃 </li>
+										<li> 📚I grew up a book nerd and have a small collection of Stephen King books</li>
+									</p>
+									</ul>
+								</div>
+							</div>
+							</center>
+						</section>
+					-->
 			</div>
+			
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
