--- a/index.html
+++ b/index.html
@@ -34,18 +34,20 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="split">
-							<section>
+							<section><indent>
 							<h1>Yessica Ramirez</h1>
 							<h2>Work in Progress</h2>
 							<p>Hi there, I'm a first-generation Latina from Mexico with a passion for learning about the latest technological advancements. 
 								As a computer science major at CSU East Bay, I'm always striving to improve my skills through online resources and working with datasets, 
 								particularly with SQL.</p> 
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="https://www.linkedin.com/in/yessica-v-ramirez" class="button">LinkedIn</a></li>
+								<li><a href="https://public.tableau.com/views/CustomerPersonalityAnalysis_16824421760620/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" 
+									class="button">See Dashboard</a></li>
 							</ul>
 						</section>
 						<section>
-						<img class= "image.right" src="images/Profile_picture.png" alt="Yessica Ramirez posing next to hugging face" width="100%" height="100%" >
+						<img class= "image.right" src="images/Profile_picture.png" alt="Yessica Ramirez posing next to hugging face" width="100%" >
 					</section>
 
 						</div>
@@ -57,10 +59,11 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Tableau COVID-19 Dashboard</h2>
-									<p>(In the works to update webpage...) <br> Completed the visualization of COVID-19 vaccination data on Tableau desktop. <br>
+									<p> Completed the visualization of COVID-19 vaccination data on Tableau desktop. <br>
 									Followed the guidelines from youtube tutorial. </p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://public.tableau.com/views/covid19_Tableau/GlobalVaccineTracker?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" 
+											class="button">See Dashboard</a></li>
 									</ul>
 								</div>
 							</div>
@@ -69,15 +72,12 @@
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>Gentrification Analysis</h2>
-									<p> Using Tableau, I conducted a comprehensive analysis of IPUMS census data and developed an interactive 
-										dashboard displaying key variables including race, income, education, and mortgage. 
-										This project was a part of the RUMBA research program, which I successfully completed and further 
-										honed my skills in analysis, dashboard creation, and research. 
-										I worked with a large dataset of 13 GB spanning from the 1980s to 2021.
+									<h2>Consumer Personality Analysis</h2>
+									<p> Using Tableau, I followed a guided instructions of a kaggle dataset.
 									</p>
 									<ul class="actions">
-										<li><a href="GentrificationAnalysis.html" class="button">Learn more</a></li>
+										<li><a href="https://public.tableau.com/views/CustomerPersonalityAnalysis_16824421760620/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" 
+											class="button">See Dashboard</a></li>
 									</ul>
 								</div>
 							</div>
@@ -116,17 +116,20 @@
 							</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Full time student</h3>
+									<span class="icon solid major fa-school"></span>
+									<h3>Full time student
+										<br> Grad. May 2023
+									</h3>
+
 									<p>B.S. Computer Science CSU East Bay <br> A.S. Business Transfer</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
+									<span class="icon solid major fa-code"></span>
 									<h3>H2O.ai Intern</h3>
 									<p>Internship on Customer Success and Documentation team</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-cog"></span>
+									<span class="icon solid major fa-newspaper"></span>
 									<h3>Undergraduate Research, RUMBA</h3>
 									<p>Part of undergrad research team to identify correlation between race, income, and education
 										as a part of gentrification.
@@ -135,17 +138,17 @@
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>IBM Accelerate Program Participant</h3>
-									<p></p>
+									<p>Collaborated with teammates to demo as a consulting firm the IBM Watson Assistant Chatbot.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-link"></span>
+									<span class="icon solid major fa-toolbox"></span>
 									<h3>Data Vizualization Skills</h3>
-									<p>Tableau <br> Google Data Studio</p>
+									<p>Tableau has been the primary tool I've used to learn and explore although I've worked on Google Data Studio as well.</p>
 								</section>
 								<section>
-									<span class="icon major fa-gem"></span>
+									<span class="icon major fa-pen"></span>
 									<h3>Shop Executive Assistant</h3>
-									<p></p>
+									<p>Duties range from administrative work to digital organization.</p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -158,8 +161,8 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Have any questions, comments, or would like to chat just shoot me a message! I'm 
-								more than happy to meet.
+							<p>Have any questions, comments, or would like to chat just shoot me a message! 
+								<br>🪴I'm most available via my personal email and direct message on LinkedIn🪴
 							</p>
 							<div class="split style1">
 								<section>
@@ -195,6 +198,10 @@
 											<h3>Email</h3>
 											<a href="#">yessicavrm@gmail.com</a>
 											<a href="#">yramirez12@horizon.csueastbay.edu</a>
+										</li>
+										<li>
+											<h3>Location</h3>
+											<a>East Bay, CA</a>
 										</li>
 									</ul>
 								</section>
