--- a/Blog_BasicsofGit.html
+++ b/Blog_BasicsofGit.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						
-						<li><a href="index.html">tbd</a></li>
+						<li><a href="index.html">Blog</a></li>
 					</ul>
 				</nav>
 			</header>
