Included Kaggle Data Notebook

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 							<section>
 							<h1>Yessica Ramirez🌿</h1>
-							<p>👋 Hi there, I'm a first-generation Latina from Mexico whose curious to learn about the latest technological advancements. 
-								As a recent computer science B.S. graduate, I'm always striving to improve my skills through online resources. I've been dabbling in ML through 
-								kaggle and also analyzing datasets through BQ, Looker, Tableau, Data Studio, and a few more tools.</p> 
+							<p>👋 Hi there, I'm a first-generation Latina whose curious to learn about the latest technological advancements. 
+								As a recent computer science B.S. graduate, I strive to improve my skills through online resources and on hands project building.
+								I'm prepared to begin my data journey with a company that values growth and innovation. #OpenToHire </p> 
 							<ul class="actions">
 								<li><a href="https://www.linkedin.com/in/yessica-v-ramirez" class="button">LinkedIn</a></li>
 								
@@ -57,7 +57,7 @@
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>Consumer Personality Analysis</h2>
+									<h2>Tableau Consumer Personality Analysis</h2>
 									<p> Creation of a customer personality analysis from the kaggle notebook <a href=https://www.kaggle.com/code/kamilay/customer-segmentation-analysis-using-clustering#IMPORTING-LIBRARIES
 										>'Customer Segmentation Analysis - Using Clustering'</a><br><br> From this project alone I learned
 										how to create donut graphs, bar graphs, and histograms. In additon to interactivity with highlights from the Analysis tool. 
@@ -80,6 +80,21 @@
 										<ul class="actions">
 											<li><a href="https://public.tableau.com/views/covid19_Tableau/GlobalVaccineTracker?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" 
 												class="button">See Dashboard</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+
+							<section>
+								<div class="content">
+									<div class="inner">
+										<h2>Youtube Data Analysis with Python</h2>
+										<p>My latest Analysis was on the Kaggle dataset 'Youtube 2023 Statistics'. You can click on the button below and see my
+											notebook. Included various libraries such as pandas, matplot, and plotly. <br> 
+											
+										</p>
+										<ul class="actions">
+											<li><a href="https://www.kaggle.com/code/valyrm/youtube-analysis" class="button">Kaggle Notebook</a></li>
 										</ul>
 									</div>
 								</div>
