--- a/ResumePage.html
+++ b/ResumePage.html
@@ -34,8 +34,8 @@
 						<div class="inner">
 							<h1 class="major">Resume 2023</h1>
 							<center>
-								<a href="2023Resume.pdf" class="active">Download</a><br>
-							<object data="2023Resume.pdf" width="800" height="700"></object></center>
+								<a href="2023 Resume, R.Yessica.pdf" class="active">Download</a><br>
+							<object data="2023 Resume, R.Yessica.pdf" width="800" height="700"></object></center>
 						</div>
 					</section>
 					<!--
