--- a/index.html
+++ b/index.html
@@ -142,12 +142,9 @@
 								changes for a documentation website that integrated an AI chatbot. 
 								Although it hasn't been the smoothest ride, I've grown and learned so much along the way.
 								<br><br>
-								Currently, I'm venturing into the world of data and contemplating which role to pursue. 
-								Data Analyst, Business Intelligence, and Data Engineer all sound appealing to me, but I'm having a tough time deciding which 
-								one to focus on. I've done my research and have a good grasp on the fundamental differences between each role, 
-								but nothing beats hands-on experience to truly discover where my interests lie. 
-								Any input or advice would be greatly appreciated!
-							</p>
+								I'm eagerly exploring opportunities that align with my skill set and offer room for both personal and professional growth.
+								 My goal is to delve into roles where I can employ my data-centric talents to their fullest potential and, in turn, 
+								 nurture my expertise further.							</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-school"></span>
